# muse2_data_analysis

./: .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/actions/setup-muse2-main/: action.yml
.github/actions/setup-muse2-release/: action.yml
.github/actions/verify-muse2/: action.yml
.github/workflows/: auto-merge.yml  check-links.yml  ci.yml  test-with-muse2.yml
data/: README.txt
muse2_data_analysis/: __init__.py  __main__.py  helpers.py  muse2.py
notebooks/: capacity.ipynb  prices.ipynb
tests/: __init__.py  test_helpers.py  test_muse2.py  test_muse2_data_analysis.py
