[project]
name = "muse2_data_analysis"
dynamic = ["version"]
description = "Python scripts and Jupyter notebooks for analysing and visualising MUSE2 data files."
authors = [
    {name = "Alex Dewar", email = "a.dewar@imperial.ac.uk"},
    {name = "Imperial College London RSE Team", email = "ict-rse-team@imperial.ac.uk"},
]
requires-python = ">=3.14"

dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.14.13",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]


[tool.mypy]
disallow_any_explicit = true
disallow_any_generics = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = [".venv/", "docs/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
addopts = "-v -p no:warnings --cov=muse2_data_analysis --cov-branch --cov-report=html --cov-report=xml --doctest-modules --ignore=docs/"

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = [
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "RUF", # ruff
]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
]

[build-system]
requires = ["setuptools>=78", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["muse2_data_analysis"]

[tool.setuptools_scm]
